# GA330-libretro

./: .gitignore  .gitmodules  7days.imports.txt  CMakeLists.txt  README.md  api.csv  make-thunks.py  make_thunks.py
include/: svc_handlers.h
libccos/include/libccos/: ccos_host.h  dl.h  malloc.h  ucos_ii.h
libccos/src/: dl.c  malloc.c  ucos_ii.c
minisys/: Makefile  emu.h  init.c  minisys.c  minisys.ld  syscalls.c  thunksdef.h
src/: api.cpp  ccdl.c  ccdl.cpp  ccdl.hpp  debug.cpp  debug.hpp  filesystem.cpp  filesystem.hpp  libretro-main.c  libretro-main.cpp  main.c  standalone-main.cpp  svc_handlers.hpp
